--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
     <h1>Git & GitHub Crash Course</h1>
     <p>Because the basics are important!</p>
+
+    <a> abc </a>
+    <p> abc abc abc </p>
   </body>
 </html>
